After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 665258 - Crashes when the SQLite database is read only
Crashes when the SQLite database is read only
Status: RESOLVED FIXED
Product: gcompris
Classification: Other
Component: general
unspecified
Other All
: Normal minor
: ---
Assigned To: Bruno Coudoin
Rami Aubourg-Kaires
Depends on:
Blocks:
 
 
Reported: 2011-12-01 01:08 UTC by Bruno Coudoin
Modified: 2012-04-03 23:44 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Bruno Coudoin 2011-12-01 01:08:40 UTC
When GCompris tries to write the children win/lost log in the database, GCompris crashes if the database is Read Only.
Comment 1 Bruno Coudoin 2012-04-03 23:44:25 UTC
Fixed based on a patch provided by Lavanya gunasekaran.
Commit: http://git.gnome.org/browse/gcompris/commit/?id=c019f40c59a3abb9ca3e0deee97399d4e5985ba3