core: no more crash if we fail to write to the database.

This fixes bug https://bugzilla.gnome.org/show_bug.cgi?id=665258